# volpick

./: .gitignore  README.md  pyproject.toml
FI_test/: FI_test.ipynb
FI_test_alt/: FI_intervals.txt
FI_test_westernus/: FI_intervals.txt  FI_test.ipynb
Final_models/: demo.ipynb
Test_labeller/: test_labeller.ipynb
data_proc/: alaska.ipynb  cascade.ipynb  check_V_channels.py  combine_datasets.py  convert_alaska.py  convert_cascade_lp.py  convert_cascade_vt.py  convert_hawaii.py  convert_hawaii2.py  convert_japan_seisbench.py  convert_japan_tec_lp.py  convert_japan_vol_lp.py  convert_japan_vt.py  convert_ncedc.py  convert_ncedc_vt.py  convert_noise.ipynb  convert_same.py  convert_stead_noise.py  data_ana.ipynb  download_alaska.py  download_cascade.py  download_cascade_vt.py  download_hawaii.py  download_hawaii2.py  download_japan_VT.py  download_japan_catalog.py  download_japan_tec_lp.py  download_japan_vol_lp.py  download_ncedc_LP.py  download_ncedc_VT.py  download_noise_ak.py  download_noise_hw.py  download_noise_jp.py  get_noise.ipynb  hawaii.ipynb  japan.ipynb  ncedc.ipynb  plot_some_waveforms.py  test.ipynb
model_training/: diffsize.ipynb  p.json  test.ipynb  test_INSTANCE.ipynb  test_STEAD.ipynb  test_alternative.ipynb  test_ar_picker.py  test_labeller.ipynb  test_onephase.ipynb  test_swa.ipynb  test_true_negative_rate.ipynb  train0.sh  train0_pre.sh  train1.sh  train1_pre.sh  train_ema_e.sh  train_ema_p.sh  train_onephase0.sh  train_onephase1.sh  train_swa_e.sh  train_swa_p.sh  train_testsize0.sh  train_testsize1.sh  train_whole_e.sh  train_whole_p.sh  (+4 more)
(+54 files in other folders)
