[build-system]
requires = ["wheel", "setuptools >= 61.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "volpick"
# dynamic = ["version"]
version = "0.0.1"
maintainers = [
    { name = "Yiyuan Zhong", email = "yiyuan.zhong@link.cuhk.edu.hk" },
]


[tool.setuptools.packages.find]
include = ["volpick*"]
